--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 [dependencies]
 bincode = "1.3.3"
 rand = "0.8.5"
-serde = "1.0.210"
+serde = { version = "1.0.210", features = ["derive"] }
 sha1 = "0.10.6"
