--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ bincode = "1.3.3"
 rand = "0.8.5"
 serde = { version = "1.0.210", features = ["derive"] }
 sha1 = "0.10.6"
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
